[gd_scene load_steps=43 format=3 uid="uid://ohyewevipnp"]

[ext_resource type="Script" path="res://resources/Scripts/player_movement.gd" id="1_5o20t"]
[ext_resource type="Texture2D" uid="uid://wu6mgmv7e73c" path="res://resources/Art/Animations/Characters/Goblin Dude/Goblin Dude Master-Sheet.png" id="2_7ca2x"]
[ext_resource type="AnimationLibrary" uid="uid://c66bkhvyiynbw" path="res://resources/Animations/Player.res" id="3_bm2fv"]
[ext_resource type="AnimationNodeBlendSpace2D" uid="uid://cpg1vritmuubu" path="res://resources/Animations/push_blend_space_2d.tres" id="4_0ebha"]
[ext_resource type="AnimationNodeBlendSpace2D" uid="uid://crs6ocoqxbmsk" path="res://resources/Animations/pull_blend_space_2d.tres" id="5_fntbx"]
[ext_resource type="Script" path="res://resources/Scripts/ComponentScripts/component_tree_script.gd" id="5_wj4xv"]
[ext_resource type="Script" path="res://resources/Scripts/ComponentScripts/can_move_component_script.gd" id="6_g63d8"]
[ext_resource type="Script" path="res://resources/Scripts/ComponentScripts/control_component_script.gd" id="7_6t6ta"]
[ext_resource type="Script" path="res://resources/Scripts/ComponentScripts/control_move_state_component_script.gd" id="8_woa6o"]
[ext_resource type="Script" path="res://resources/Scripts/ComponentScripts/grab_handler_script.gd" id="9_7htrx"]
[ext_resource type="PackedScene" uid="uid://bhg60u0s7fow7" path="res://resources/Components/weighs_down_buttons_component.tscn" id="10_0inj6"]
[ext_resource type="Script" path="res://resources/Scripts/ComponentScripts/attribute_handler_script.gd" id="10_1fn7b"]
[ext_resource type="Script" path="res://resources/Scripts/ComponentScripts/animator_controller_component_script.gd" id="10_jf36l"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iehrl"]
radius = 6.0
height = 15.0

[sub_resource type="Animation" id="Animation_iradj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aj01e"]
_data = {
"RESET": SubResource("Animation_iradj")
}

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_78ivv"]
blend_point_0/node = ExtResource("4_0ebha")
blend_point_0/pos = 1.0
blend_point_1/node = ExtResource("5_fntbx")
blend_point_1/pos = -1.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3fl4x"]
animation = &"Player/Idle_Back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u8do8"]
animation = &"Player/Idle_Front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_llrwi"]
animation = &"Player/Idle_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v031n"]
animation = &"Player/Idle_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3i22q"]
animation = &"Player/Idle_Back_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mrimd"]
animation = &"Player/Idle_Front_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aknl5"]
animation = &"Player/Idle_Back_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r2v1v"]
animation = &"Player/Idle_Front_Right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_svx1c"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3fl4x")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_u8do8")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_llrwi")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_v031n")
blend_point_3/pos = Vector2(-1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_3i22q")
blend_point_4/pos = Vector2(-0.5, -0.5)
blend_point_5/node = SubResource("AnimationNodeAnimation_mrimd")
blend_point_5/pos = Vector2(-0.5, 0.5)
blend_point_6/node = SubResource("AnimationNodeAnimation_aknl5")
blend_point_6/pos = Vector2(0.5, -0.5)
blend_point_7/node = SubResource("AnimationNodeAnimation_r2v1v")
blend_point_7/pos = Vector2(0.5, 0.5)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jeiju"]
animation = &"Player/Walk_Back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xprl8"]
animation = &"Player/Walk_Front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nmf7o"]
animation = &"Player/Walk_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gewr5"]
animation = &"Player/Walk_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x5f4c"]
animation = &"Player/Walk_Back_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6o7st"]
animation = &"Player/Walk_Front_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ybtt2"]
animation = &"Player/Walk_Back_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mruah"]
animation = &"Player/Walk_Front_Left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_3wqg7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_jeiju")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_xprl8")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_nmf7o")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_gewr5")
blend_point_3/pos = Vector2(1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_x5f4c")
blend_point_4/pos = Vector2(0.5, -0.5)
blend_point_5/node = SubResource("AnimationNodeAnimation_6o7st")
blend_point_5/pos = Vector2(0.5, 0.5)
blend_point_6/node = SubResource("AnimationNodeAnimation_ybtt2")
blend_point_6/pos = Vector2(-0.5, -0.5)
blend_point_7/node = SubResource("AnimationNodeAnimation_mruah")
blend_point_7/pos = Vector2(-0.5, 0.5)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7gi3v"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ib3ng"]
advance_mode = 2
advance_expression = "velocity"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k01o1"]
advance_mode = 2
advance_expression = "!velocity"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_atgyu"]
advance_mode = 2
advance_expression = "grabbing"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u7cd5"]
advance_mode = 2
advance_expression = "grabbing"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c3hem"]
advance_mode = 2
advance_expression = "!grabbing"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_jv45e"]
states/Grab/node = SubResource("AnimationNodeBlendSpace1D_78ivv")
states/Grab/position = Vector2(548, 184)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_svx1c")
states/Idle/position = Vector2(418, 184)
states/Start/position = Vector2(287, 184)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_3wqg7")
states/Walk/position = Vector2(418, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_7gi3v"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_ib3ng"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_k01o1"), "Walk", "Grab", SubResource("AnimationNodeStateMachineTransition_atgyu"), "Idle", "Grab", SubResource("AnimationNodeStateMachineTransition_u7cd5"), "Grab", "Idle", SubResource("AnimationNodeStateMachineTransition_c3hem")]
graph_offset = Vector2(9, 31)

[node name="Gobbo" type="CharacterBody2D" groups=["player"]]
position = Vector2(22, 3)
slide_on_ceiling = false
script = ExtResource("1_5o20t")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("CapsuleShape2D_iehrl")

[node name="Player" type="Sprite2D" parent="."]
texture = ExtResource("2_7ca2x")
hframes = 8
vframes = 7
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aj01e"),
"Player": ExtResource("3_bm2fv")
}
autoplay = "Player/Walk_Right"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_jv45e")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/Grab/blend_position = 0
parameters/Grab/0/blend_position = Vector2(0, 0)
parameters/Grab/1/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(-0.299475, 0.329787)
parameters/Walk/blend_position = Vector2(-0.504378, 0.531915)

[node name="ComponentTree" type="Node" parent="."]
script = ExtResource("5_wj4xv")

[node name="CanMoveComponent" type="Node" parent="ComponentTree"]
script = ExtResource("6_g63d8")

[node name="MovementStateMachine" type="Node" parent="ComponentTree/CanMoveComponent" node_paths=PackedStringArray("start_state")]
script = ExtResource("7_6t6ta")
start_state = NodePath("ControlMoveStateComponent")

[node name="ControlMoveStateComponent" type="Node" parent="ComponentTree/CanMoveComponent/MovementStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("8_woa6o")
actor = NodePath("../../../..")

[node name="GrabHandler" type="Node" parent="ComponentTree/CanMoveComponent/MovementStateMachine/ControlMoveStateComponent"]
script = ExtResource("9_7htrx")

[node name="GrabRayCast" type="RayCast2D" parent="ComponentTree/CanMoveComponent/MovementStateMachine/ControlMoveStateComponent/GrabHandler"]
collide_with_areas = true

[node name="AnimatorControllerComponent" type="Node" parent="ComponentTree/CanMoveComponent" node_paths=PackedStringArray("animation_tree", "actor")]
script = ExtResource("10_jf36l")
animation_tree = NodePath("../../../AnimationTree")
actor = NodePath("../../..")

[node name="AttributeHandler" type="Node" parent="ComponentTree"]
script = ExtResource("10_1fn7b")

[node name="WeighsDownButtons" parent="ComponentTree/AttributeHandler" instance=ExtResource("10_0inj6")]

[connection signal="state_changed" from="ComponentTree/CanMoveComponent/MovementStateMachine" to="ComponentTree/CanMoveComponent/AnimatorControllerComponent" method="_on_movement_state_machine_state_changed"]
[connection signal="grabbed_object" from="ComponentTree/CanMoveComponent/MovementStateMachine/ControlMoveStateComponent/GrabHandler" to="ComponentTree/CanMoveComponent/MovementStateMachine/ControlMoveStateComponent" method="_on_grabbed_object"]
[connection signal="released_object" from="ComponentTree/CanMoveComponent/MovementStateMachine/ControlMoveStateComponent/GrabHandler" to="ComponentTree/CanMoveComponent/MovementStateMachine/ControlMoveStateComponent" method="_on_released_object"]
